dh-python (3.20180822) UNRELEASED; urgency=medium

  * Enable verbose mode for nose to comply with Debian Policy 4.2.0

 -- Ondřej Nový <onovy@debian.org>  Wed, 22 Aug 2018 15:59:25 +0200

dh-python (3.20180723) unstable; urgency=medium

  * dh-python depends on python3-distutils (as most package that use dh-python
    would have to depend on it anyway, closes: 894203)
  * dh_python{2,3}:
    - fix \.so.* symlink renaming for non-default Python versions
      (closes: 739500, 903698)
    - when files cannot be shared between Python versions because of
      differences, print (in --verbose mode) a unified diff for diagnostic
      purposes (closes: 801710, thanks to Barry Warsaw for the original patch)

 -- Piotr Ożarowski <piotr@debian.org>  Mon, 23 Jul 2018 14:39:41 +0200

dh-python (3.20180607) experimental; urgency=medium

  [ Scott Kitterman ]
  * Stop setting minimum python and python3 versions since the minimum version
    is in all supported releases 

  [ Piotr Ożarowski ]
  * pybuild: set DEB_PYTHON_INSTALL_LAYOUT to "deb" if it's not set already

 -- Piotr Ożarowski <piotr@debian.org>  Thu, 07 Jun 2018 23:56:25 +0200

dh-python (3.20180326) unstable; urgency=medium

  * pybuild: fix cross compiling stuff to use dpkg-architecture if available
    (and move dpkg-dev to Suggests)
  * Add python3-distutils to Recommends to make the transition easier

 -- Piotr Ożarowski <piotr@debian.org>  Mon, 26 Mar 2018 21:19:20 +0200

dh-python (3.20180318) unstable; urgency=medium

  [ Ondřej Nový ]
  * d/copyright: Use https protocol in Format field
  * d/changelog: Remove trailing whitespaces

  [ Ben Finney ]
  * Ignore leading and trailing whitespace from ‘pydist’ lines when parsing
    (closes: 860139)

  [ Piotr Ożarowski ]
  * pybuild.pm: add support for DEBPYTHON{3,}_{DEFAULT,SUPPORTED} env. vars
    (closes: 861132)
  * pybuild:
    - support cross compiling Python 3.X extensions (i.e. set
      _PYTHON_SYSCONFIGDATA_NAME env. and add dpkg-dev to Depends